<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:padding="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/hated_math"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/feedback"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You did"
            android:textColor="@android:color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Difficulty"
                    android:textSize="24sp"
                    android:paddingBottom="8dp"/>

                <RadioButton
                    android:id="@+id/radio_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textSize="20sp"
                    android:text="@string/rad_easy"/>

                <RadioButton
                    android:id="@+id/radio_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/rad_medium"/>

                <RadioButton
                    android:id="@+id/radio_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/rad_hard"/>

            </RadioGroup>

            <!-- Operation Selection -->
            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Operation"
                    android:textSize="24sp"
                    android:paddingBottom="8dp"/>

                <RadioButton
                    android:id="@+id/radio_addition"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/rad_add"/>

                <RadioButton
                    android:id="@+id/radio_subtraction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/rad_sub"/>

                <RadioButton
                    android:id="@+id/radio_multiplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/rad_mul"/>

                <RadioButton
                    android:id="@+id/radio_division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/rad_div"/>

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_numquest"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_minus"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/edittext_number_of_questions"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:gravity="center"
                android:textSize="30sp"
                android:text="10"
                android:ems="3"/>

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_plus"
                android:padding="8dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_square_button"
            android:text="@string/btn_start"
            android:textSize="40sp" />


    </LinearLayout>

</FrameLayout>